feat: add check auth for core layout
