# src/shared/api/zod/userDtoSchema.ts
@@ -1,10 +1,10 @@
-import { z } from "zod";
+import { z } from 'zod'
 
 export const userDtoSchema = z.object({
-  id: z.number().describe("User ID"),
-  email: z.string().describe("Email"),
-  username: z.string().describe("Имя пользователя"),
-  picture: z.string().describe("Изображение пользователя"),
-});
+  id: z.number().describe('User ID'),
+  email: z.string().describe('Email пользователя'),
+  username: z.string().describe('Имя пользователя'),
+  picture: z.string().describe('Изображение пользователя'),
+})
 
-export type UserDtoSchema = z.infer<typeof userDtoSchema>;
+export type UserDtoSchema = z.infer<typeof userDtoSchema>
